capacityplanner/force-app/main/default/objects/Capacity_Tracking__c/Capacity_Tracking__c.object-meta.xml
<CustomObject>
    <label>Capacity Tracking</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Capacity Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capacity Tracking</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>