capacityplanner/force-app/main/default/objects/Capacity_Tracking__c/fields/Available_Hours__c.field-meta.xml
<CustomField>
    <fullName>Available_Hours__c</fullName>
    <formula>IF(Is_Manual_Override__c, Manual_Available_Hours__c, Base_Hours__c - Leave_Hours__c - Holiday_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>