capacityplanner/force-app/main/default/objects/Capacity_Tracking__c/fields/Base_Hours__c.field-meta.xml
<CustomField>
    <fullName>Base_Hours__c</fullName>
    <defaultValue>7.5</defaultValue>
    <label>Base Hours</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>