capacityplanner/force-app/main/default/objects/Capacity_Tracking__c/fields/Holiday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Holiday Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>