capacityplanner/force-app/main/default/objects/Capacity_Tracking__c/fields/Is_Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the available hours were manually overridden by a manager</description>
    <label>Is Manual Override</label>
    <type>Checkbox</type>
</CustomField>