capacityplanner/force-app/main/default/objects/Capacity_Tracking__c/fields/Last_Modified_By_Member__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Member__c</fullName>
    <description>ID of the team member who last modified this capacity record for audit trail</description>
    <label>Last Modified By Member</label>
    <length>18</length>
    <type>Text</type>
</CustomField>