capacityplanner/force-app/main/default/objects/Capacity_Tracking__c/fields/Leave_Hours__c.field-meta.xml
<CustomField>
    <fullName>Leave_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Leave Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>