capacityplanner/force-app/main/default/objects/Capacity_Tracking__c/fields/Manual_Available_Hours__c.field-meta.xml
<CustomField>
    <fullName>Manual_Available_Hours__c</fullName>
    <description>Manually set available hours when Is_Manual_Override__c is true</description>
    <label>Manual Available Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>