capacityplanner/force-app/main/default/objects/Capacity_Tracking__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <description>Reason for manually overriding the calculated capacity hours</description>
    <label>Override Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>