capacityplanner/force-app/main/default/objects/Capacity_Tracking__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links capacity tracking record to a specific sprint</description>
    <label>Sprint</label>
    <referenceTo>Sprint__c</referenceTo>
    <relationshipLabel>Capacity Tracking</relationshipLabel>
    <relationshipName>Capacity_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>