capacityplanner/force-app/main/default/objects/Capacity_Tracking__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Capacity Tracking</relationshipLabel>
    <relationshipName>Capacity_Tracking</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>